# streamlit--dasboard

./: .gitignore  LICENSE  app.py  gastos.csv  pyproject.toml  readme.md  requirements.txt  style.css
.streamlit/: config.toml  pages.toml
controllers/: pay_querys.py  querys.py
helpers/: download_files.py  expenses_helpers.py  load_css.py  query.py
models/: db.py
pages/: 1_catalogo📖.py  2_Gsstos💲.py  3_Carga de archivos excel 📗.py  4_datos.py
views/: beta.py  catalogo.py  dash.py  datos.py  experimental.py  gastos.py  pagos.py  reportes.py  xlsx.py
